# RUST-Korean

./: .gitignore  Cargo.toml  README.md
.github/workflows/: develop.yml  release.yml
examples/: check_korean.rs  double_consonant_example.rs  korean_compose_check.rs  korean_compose_example.rs  korean_compose_example_2.rs  rustkorean_examples.rs
src/: compose_korean.rs  enums.rs  lib.rs
tests/: fuction_tests.rs
