[package]
name = "rustkorean"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Joohyung Park <leoppark94@gmail.com>"]
description = "RustKorean is a Rust library for processing Korean characters. It provides functionalities to check if a character is Korean, classify Korean characters, verify if a character is a leading consonant (choseong), a medial vowel (jungseong), or a trailing consonant (jongseong) in the Korean writing system, combine Jamo characters into complete Hangul syllables, and check the syllable type of characters."
repository = "https://github.com/leoppark94/RUST-Korean"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
